--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 /node_modules
-/public/img/*.*
-/public/stocks/*.*
-/public/users/*.*
-/public/companies/*.*
+/public/img/?*.*
+/public/stocks/?*.*
+/public/users/?*.*
+/public/companies/?*.*
 /logs
