--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gm": "^1.21.1",
     "mime": "^1.3.4",
     "mongoose": "^4.2.8",
-    "multer": "^1.1.0"
+    "multer": "^1.1.0",
+    "nodemailer": "^1.11.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
