--- a/package.json
+++ b/package.json
@@ -1,25 +1,13 @@
 {
-  "name": "OpenShift-Sample-App",
+  "name": "MMM-API-Server",
   "version": "1.0.0",
-  "description": "OpenShift Sample Application",
-  "keywords": [
-    "OpenShift",
-    "Node.js",
-    "application",
-    "openshift"
-  ],
+  "description": "MMM api server",
   "scripts": {
     "start": "node index.js"
   },
   "author": {
-    "name": "OpenShift",
-    "email": "ramr@example.org",
-    "url": "http://www.openshift.com/"
-  },
-  "homepage": "http://www.openshift.com/",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/openshift/origin-server"
+    "name": "Tom Sawyer",
+    "email": "mortraineymusic@gmail.com",
   },
   "engines": {
     "node": ">= 5.0.0",
