--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "author": {
     "name": "Tom Sawyer",
-    "email": "mortraineymusic@gmail.com",
+    "email": "mortraineymusic@gmail.com"
   },
   "engines": {
     "node": ">= 5.0.0",
