--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mime": "^1.3.4",
     "mongoose": "^4.2.8",
     "multer": "^1.1.0",
-    "nodemailer": "^1.11.0"
+    "nodemailer": "^1.11.0",
+    "supertest": "^1.1.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
